commit gc log